# custodian_server

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  deploy.sh  docker-compose.yml  prepare_tests.sh  prepare_tests_bch.sh  run_tests.sh  use_prepared_database.sh  use_prepared_database_bch.sh
.circleci/: config.yml
configs/: btc-testnet.cfg
src/: .main.rs.swp  bitprim.rs  lib.rs  main.rs  server_state.rs  tests.rs  wallet.rs
src/data_guards/: from_data.rs  mod.rs
src/handlers/: addresses.rs  handler.rs  hd_addresses.rs  hd_wallets.rs  helpers.rs  mod.rs  multisig_addresses.rs  multisig_wallets.rs  plain_wallets.rs  rsk.rs  wallets.rs
src/handlers/addresses/: base.rs  hd.rs  mod.rs  multisig.rs  plain.rs  plain_address.rs
src/handlers/blocks/: base.rs
src/handlers/transactions/: base.rs
src/handlers/wallets/: base.rs  hd.rs  mod.rs  multisig.rs  plain.rs
src/models/: address.rs  block.rs  database.rs  hd_address.rs  hd_wallet.rs  jsonapi_record.rs  mod.rs  multisig_address.rs  multisig_wallet.rs  plain_address.rs  plain_wallet.rs  resource_address.rs  resource_transaction.rs  resource_wallet.rs  rsk.rs  transaction.rs  utxo.rs  wallet.rs  wallets.rs
src/serializers/: from_json_api.rs  mod.rs  to_json_api.rs
tests/: bch-regtest.cfg  bch-testnet.cfg  btc-testnet.cfg  integration_test.rs  ltc-testnet.cfg  plain_wallet_test.rs  wallet_crud_integration_test.rs  wallet_test.rs
tests/data/: addresses.txt  multisig_incoming_transactions.json  multisig_utxos.json  plain_utxos.json
