[package]
name = "custodian_server"
version = "0.1.0"
authors = ["nubis <yo@nubis.im>"]

[dependencies]
pear_codegen = "0.0.19"
libc = "0.2.40"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_cors = "*"
mock_derive = "0.7.0"
ctrlc = "3.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bitcoin = "0.13.1"
jsonapi = { git = "https://github.com/bitex-la/jsonapi-rust" }
bitprim = { git = "https://github.com/bitex-la/bitprim-rust", features = ["btc"] }

[build-dependencies]
regex = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dev-dependencies]
pretty_assertions = "*"

[features]
default = ["btc"]
btc = []
bch = []
ltc = []
