[package]
name = "custodian_server"
version = "0.1.0"
authors = ["nubis <yo@nubis.im>"]

[dependencies]
tiny_ram_db = "0.1.14"
pear_codegen = "0.1.2"
libc = "0.2.40"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_cors = "*"
mock_derive = "0.7.0"
ctrlc = "3.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
maplit = "1.0.1"
bitcoin = "*"
jsonapi = { git = "https://github.com/bitex-la/jsonapi-rust" }
bitprim = { git = "https://github.com/bitex-la/bitprim-rust", features = ["btc", "v0_16_0"] }
rand="0.3"
queryst="1"

[build-dependencies]
regex = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.secp256k1]
version = "0.11"
features = [ "rand" ]

[dev-dependencies]
pretty_assertions = "*"

[features]
default = ["btc"]
btc = []
bch = []
ltc = []
